<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <!-- Srings of notification -->
    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>
    <string name="notification_channel_id" translatable="false">channel</string>
    <string name="view_details">View Detail</string>

    <!-- Srings of button -->
    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="img_description_download">Image of download</string>

    <!-- Srings of radiogrup -->
    <string name="txt_glide_radiogroup">Glide - Image Bulding library by BumpTech</string>
    <string name="txt_loadapp_radiogroup">LoadApp - Current repository by Udacity</string>
    <string name="txt_retrofit_radiogroup">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>

    <!-- String to Detail View -->
    <string name="btn_ok">ok</string>
    <string name="file_name">File name:</string>
    <string name="txt_success">Success</string>
    <string name="txt_fail">Fail</string>
    <string name="txt_status">Status:</string>
    <string name="edt_text">Add the URL web</string>

</resources>
